refactor(code with me): 코드 컨밴션에 맞게 LabelRepository 리팩토링